# SopelGE

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: Image2D.vert  default.frag  default.vert  image2D.frag  point.frag  point.vert  text2D.frag  text2D.vert
engine/assets/: AssimpAssetsManager.cc  AssimpAssetsManager.h  CMakeLists.txt  EngineAssets.h  IAssetsManager.cc  IAssetsManager.cpp  IAssetsManager.h  Image.h  Mesh.h  Model.h  SpMaterial.h  SpModel.h
engine/common/: BasicTypes.h  Types.h
engine/config/: CMakeLists.txt  Settings.cpp  Settings.h
engine/core/: CMakeLists.txt  Color.cc  Color.h  Engine.cc  Engine.cpp  Engine.h  SystemComponents.h  Utilities.h  types.h
engine/core/components/: Component.h  EngineComponents.h  IComponentsManager.h
engine/core/entities/: Entity.cpp  Entity.h  IEntitiesManager.cpp  IEntitiesManager.h
engine/core/scenes/: ISceneManager.h  Scane2D.h
engine/core/systems/: EngineSystem.h  ISystemsManager.cpp  ISystemsManager.h  System.h  SystemRenderer.cpp
engine/depricated_core/: BasicTypes.h  Component.h  ECSGameEngine.cc  ECSGameEngine.h  Engine.cc  SGEGameEngine.cc  SGEGameEngine.h  Types.h  code_snipet.txt
engine/errors/: ErrorCodes.h
engine/graphic/: CMakeLists.txt  IRenderer.h  OGL.cc  OGL.cpp  OGL.h  graphicTypes.h
engine/window/: CMakeLists.txt  IWindow.h  Window.cpp  Window.h  WindowOGL.cpp  WindowOGL.h
scripts/: prepare_env.sh
tools/level_editor/: CMakeLists.txt  build.sh  readme.md
tools/level_editor/src/: SGELevelEditor.cpp  SGELevelEditor.h
